[package]
name = "iso6709parse"
authors = ["Tim Reed <thetimmyreed@gmail.com>"]
version = "1.0.0"
edition = "2024"
license = "MIT"
categories = ["parser-implementations"]
keywords = ["iso6709", "latlon", "coordinates", "parse", "gps"]
repository = "https://github.com/TimLikesTacos/iso6709parse.git"
readme = "README.md"
description = "Parses coordinates in ISO6709 format from strings"

[dependencies]
nom = "8"
geo-types = "0.7"

[dev-dependencies]
criterion = "0.7"
latlon = "0.1.3"

[[bench]]
name = "benchmark"
harness = false
